--- a/tienda/src/main/webapp/css/table1.css
+++ b/tienda/src/main/webapp/css/table1.css
@@ -16,7 +16,7 @@ table{
     border-collapse: collapse;
     border-color: rgb(238, 238, 238);
     box-shadow:rgb(127, 166, 80) 5px 5px 10px;
-    
+     background-color:white;
 }
 
 .modal .modal-content{
@@ -56,7 +56,7 @@ th,td{
     border-style:groove;
     border-color: rgb(238, 238, 238);
     padding: 5px;
-    color:white;
+    color:blue;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 td{
